--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\SHUBHAM\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/user/user/.netbeans/8.1/build.properties
